@@ -6,6 +6,7 @@
     <li>#233 Error overlay over whole of screen if connection is lost.<br>
         Add Notification group to configure the behaviour in IDE settings.
     </li>
+    <li>#230: jobs in folders: job name too long</li>
 </ul>
 <h3>0.13.6</h3>
 <ul>
